@@ -2,6 +2,7 @@ package com.sprint.be_java_hisp_w23_g04.repository;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import com.sprint.be_java_hisp_w23_g04.dto.DBUserDto;
 import com.sprint.be_java_hisp_w23_g04.entity.User;
 import com.sprint.be_java_hisp_w23_g04.utils.UserMapper;
@@ -12,7 +13,9 @@ import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Repository
 public class SocialMediaRepositoryImpl implements ISocialMediaRepository {
@@ -30,17 +33,23 @@ public class SocialMediaRepositoryImpl implements ISocialMediaRepository {
         } catch (FileNotFoundException e) {
             e.printStackTrace();
         }
-        ObjectMapper objectMapper = new ObjectMapper();
+
+        // Debes usar este ObjectMapper configurado con JavaTimeModule para la deserialización
+        ObjectMapper mapper = new ObjectMapper();
+        mapper.registerModule(new JavaTimeModule());
+
         TypeReference<List<DBUserDto>> typeRef = new TypeReference<>() {};
         List<DBUserDto> usersDto = null;
         try {
-            usersDto= objectMapper.readValue(file, typeRef);
+            // Utiliza el ObjectMapper 'mapper' que tiene registrado el JavaTimeModule
+            usersDto = mapper.readValue(file, typeRef);
         } catch (IOException e) {
             e.printStackTrace();
         }
 
-        return usersDto.stream().map(UserMapper::mapUser).toList();
+        return usersDto != null ? usersDto.stream().map(UserMapper::mapUser).collect(Collectors.toList()) : Collections.emptyList();
     }
+
 
     public List<User> findAllUsers(){
         return this.usersList;
